[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dlutils"
version = "0.0.1"
authors = [
  { name="Matthew Craigie", email="m.craigie@uq.edu.au" },
]
description = "Deep Learning Utils"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mcraigie/dlutils"